# m3u8-dowloader

./: .gitignore  .pre-commit-config.yaml  PLANNING_SESSION.md  README.md  downloader.py  gen_config.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
src/m3u8_downloader/: __init__.py  config_manager.py  downloader.py
tests/: test_downloader.py
